--- a/popup.html
+++ b/popup.html
@@ -8,8 +8,9 @@
 
 <h3>Brightness Slider</h3>
 
-<label for="brightness"></label>
-<input type="range" name="brightness" id="brightness" min="1" max="100" />
+<label for="brightness">Slider Value: <a id="brightness_num"></a></label>
+<input type="range" name="brightness" id="brightness" min="0" max="100" />
+<br>
 <button id="submit">Set</button>
 
 <script src="popup.js"></script>
